# omnitrade-legacy-engine

./: .env.example  .gitignore  = [  README.md  operator  package.json
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/core/: errors.py  logging.py  redaction.py  security.py
apps/api/app/db/: session.py  tracing.py
apps/api/app/models/: __init__.py  arena_agent_budget_assignment.py  arena_agent_registration.py  arena_comparison_record.py  arena_competition.py  arena_competition_budget_allocation.py  arena_cycle.py  arena_cycle_proposal.py  arena_leaderboard_snapshot.py  arena_participating_agent.py  arena_performance_snapshot.py  arena_risk_gate_decision.py  arena_tournament.py  arena_tournament_history_record.py  asset.py  audit_log.py  autonomous_capital_mandate.py  autonomous_capital_mandate_authorization.py  autonomous_capital_mandate_evaluation.py  autonomous_capital_mandate_version.py  backtest.py  (+57 more)
apps/api/omnitrade_legacy_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: activate_strategy.py  audit_campaign_identity.py  backfill_historical.py  backfill_intelligence_snapshots.py  compare_kraken_request_lifecycle.py  initialize_live_crypto_environment.py  replace_governing_mandate_version.py  review_live_crypto_dry_run_evidence.py  rotate_exchange_connection_credentials.py  run_autonomous_preview_cycle.py  run_live_crypto_dry_run.py  seed_assets.py  seed_paper_accounts.py  seed_strategies.py  verify_decision_linkage_integrity.py  verify_kraken_balance_auth.py  verify_kraken_balance_auth_cleanroom.py
(+1289 files in other folders)
